syntax = "proto3";
package soapbox;
option go_package = "proto";

import "soapbox.proto";
import "google/protobuf/timestamp.proto";

service Applications {
    rpc ListApplications (ListApplicationRequest) returns (ListApplicationResponse) {}
    rpc CreateApplication (Application) returns (Application) {}
    rpc GetApplication (GetApplicationRequest) returns (Application) {}
}

enum ApplicationType {
    SERVER = 0;
    CRONJOB = 1;
}

// "infrastructure" refers to the set of resources on the hosting
// service provider that Soapbox applications use -- for AWS: a VPC,
// associated network resources, and a blue and green ASG and initial
// launch config

enum CreationState {
    CREATE_INFRASTRUCTURE_WAIT = 0;
    SUCCEEDED = 1;
    FAILED = 2;
}

message Application {
    int32 id = 1;
    int32 user_id = 2;
    string name = 3;
    string description = 4;
    string external_dns = 5;
    string github_repo_url = 6;
    string dockerfile_path = 7;
    string entrypoint_override = 8;
    ApplicationType type = 9;
    google.protobuf.Timestamp created_at = 10;
    string slug = 11;
    string internal_dns = 12;
    CreationState creation_state = 13;
}

message ListApplicationRequest {
    int32 user_id = 1;
}

message ListApplicationResponse {
    repeated Application applications = 1;
}

message GetApplicationRequest {
    int32 id = 1;
}
